# cpp_docs

./: .gitignore  MODULE.bazel  README.md  build.sh
base/: BUILD  base.cc
effective_cpp/: ta.h
gtest/: BUILD  README.md  hello_test.cc
main/: BUILD
move/: BUILD  main.cc  move.cc  move.h
syntax/: BUILD  concept.cc  concept.md
template/: BUILD  main.cpp
toolchain/: BUILD  cc_toolchain_config.bzl
vector_search/: BUILD  README.md  flat.cc
