###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_cc",version = "0.0.17")
bazel_dep(name = "platforms", version = "0.0.10")
register_toolchains(
   "//toolchain:cc_toolchain_for_macos_arm64"
   #"//toolchain:cc_toolchain_for_linux_x86_64"
)