###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_cc",version = "0.0.17")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "googletest", version = "1.17.0")

# 单元测试别用，会报错 ar rcsD 只能在linux用，在macos只能 rcs 只能 d 
register_toolchains(
   "//toolchain:cc_toolchain_for_macos_arm64"
   #"//toolchain:cc_toolchain_for_linux_x86_64"
)


